--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pixl"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/link"/>
 	<classpathentry kind="output" path="bin/"/>
 </classpath>
